Update Locale usage to fix warnings.